# django-admin-favorite-filters

./: README.md  create_setup.py  manage.py  pyproject.toml  setup.py
django_admin_favorite_filters/: __init__.py  admin.py  apps.py  constants.py  filters.py  mixins.py  models.py
django_admin_favorite_filters/migrations/: 0001_initial.py
test_app/: settings.py  tests.py
tests/: settings.py  test_django_admin_favorite_filters.py
